src/App.css
@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&display=swap");

body,
html {
  margin: 0;
  padding: 0;
}
* {
  box-sizing: border-box;
}
.cards-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  overflow: hidden;
}
.card-container:first-child {
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.card-container:last-child {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}
.card-container {
  width: 100%;
  max-width: 307px;
  height: 500px;
  padding: 48px;
}
.title {
  font-size: 40px;
  color: #f2f2f2;
  font-family: "Big Shoulders Display", sans-serif;
}
.info {
  color: #f2f2f2;
  font-size: 15px;
  font-family: "Lexend Deca", sans-serif;
  width: 100%;
  max-width: 212px;
  margin-bottom: 80px;
  line-height: 1.5;
}

.more-btn {
  color: #e28625;
  background-color: #f2f2f2;
  border-radius: 25px;
  padding: 15px 30px;
  border: none;
  transition: 0.3s ease;
}

.more-btn:hover {
  transform: scale(1.1);
  background-color: transparent;
  border: 1px solid white;
  color: #f2f2f2;
}

@media (max-width: 768px) {
  .cards-container {
    flex-direction: column;
    height: auto;
    padding: 40px 0;
  }
}

